# scaffoldia

./: .editorconfig  .gitlab-ci.yml  .guix-channel  CITATION.cff  CNAME  CONTRIBUTING.md  ECOSYSTEM.scm  Justfile  META.scm  README.adoc  README.md  RSR_COMPLIANCE.adoc  STATE.scm  Voletaire.md  about.html  codemeta.json  contact.html  docs.html  flake.nix  gallery.html  guix.scm  index.html  justfile  policies.html  robots.txt  scaffoldia-init.nu  scaffoldia-init.sh  scaffoldia.cabal  sitemap.xml  stack.yaml
.github/: GOVERNANCE.md  SECURITY.md
.github/workflows/: boj-build.yml  codeql.yml  comprehensive-quality.yml  dogfood-gate.yml  e2e.yml  estate-rules.yml  guix-nix-policy.yml  openssf-compliance.yml  quality.yml  release.yml  rsr-antipattern.yml  scorecard-enforcer.yml  scorecard.yml  secret-scanner.yml  security-policy.yml  static-analysis-gate.yml  wellknown-enforcement.yml  workflow-linter.yml
.machine_readable/: AGENTIC.scm  ECOSYSTEM.scm  META.scm  NEUROSYM.scm  PLAYBOOK.scm  STATE.scm  root-allow.txt
.machine_readable/descriptiles/: CLADE.a2ml  ECOSYSTEM.a2ml  META.a2ml  PLAYBOOK.a2ml  STATE.a2ml
.well-known/: ai.txt  aibdp.json  dc.xml  humans.txt  provenance.json  security.txt
builder/: main.ncl  merge.ncl
builder/templates/asdf-plugin/: README.adoc  metaiconic-plugin.ncl  security-plugin.ncl  ui-plugin.ncl
cli/: scaffoldia.cabal  scaffoldia.hs
constraints/: dialect-roles.scm  minikanren-core.scm  repo-logic.scm
container/: deploy.k9.ncl
docs/: CITATIONS.adoc  RSR_OUTLINE.adoc  asdf-plugin-architecture.adoc  tech-debt-2026-05-26.adoc
docs/governance/: CRG-AUDIT-TEMPLATE.adoc
docs/practice/: AI-CONVENTIONS.adoc
docs/status/: READINESS.adoc
machine-readable-design/canonical-directory-structure/: README.adoc
machine-readable-design/harvested-registry/: README.adoc
machine-readable-design/harvested-registry/ecosystem/: reposystem-tool.ncl
machine-readable-design/harvested-registry/elixir/: phoenix-service.ncl
machine-readable-design/harvested-registry/gitbot/: fleet-bot.ncl
machine-readable-design/harvested-registry/haskell/: stack-library.ncl
machine-readable-design/harvested-registry/julia/: package.ncl
registry/ecosystem/: reposystem-tool.ncl
registry/elixir/: phoenix-service.ncl
registry/gitbot/: fleet-bot.ncl
registry/haskell/: stack-library.ncl
registry/julia/: package.ncl
registry/rescript/: deno-app.ncl
registry/rust/: library.ncl
repo-batcher/: ALL-FEATURES-COMPLETE.md  COMPETITIVE-ANALYSIS.md  EXTENDED-ROADMAP-2026-02-06.adoc  GETTING-STARTED.adoc  IMPLEMENTATION-STATUS.md  OPERATION-RULES-AND-MODES.adoc  OPERATIONS-EXPANSION-2026-02-06.md  OPERATIONS-EXPANSION-SUMMARY.md  PARALLEL-EXECUTION-COMPLETE.md  README.adoc  ROADMAP.adoc  justfile
repo-batcher/benchmark/: performance_test.sh
repo-batcher/docs/: ARCHITECTURE.adoc  GITHUB-SETTINGS-OPERATION.adoc  OPERATIONS-EXPANDED.adoc  OPERATIONS.adoc  SAFETY-FEATURES.adoc  WIKI-AND-COMMUNITY-OPERATIONS.adoc
repo-batcher/src/ats2/ffi/: c_exports.dats
repo-batcher/src/ats2/operations/: file_replace.dats  git_sync.dats  github_settings.dats  license_update.dats  spdx_audit.dats  types.dats  workflow_update.dats
repo-batcher/src/ats2/utils/: string_utils.dats  string_utils.sats
repo-batcher/src/ats2/validation/: spdx.dats
repo-batcher/src/v/: main.v  main_simple.v
repo-batcher/src/v/executor/: parallel.v
repo-batcher/src/v/ffi/: ats2_bridge.v
repo-batcher/src/v/github/: community.v  discussions.v  pages.v  settings.v  templates.v  wikis.v
repo-batcher/src/v/parsers/: settings_toml.v
repo-batcher/src/v/rollback/: backup_manager.v
repo-batcher/src/v/safety/: guards.v  integration.v  validation.v
repo-batcher/src/v/templates/: merge.v
repo-batcher/src/v/utils/: repo_scanner.v
repo-batcher/src/v/watcher/: monitor.v
repo-batcher/templates/: config.example.toml  license-update.example.toml
repo-batcher/tests/: advanced_github_test.sh  github_operations_test.sh  github_operations_test.v  integration_test.v  real_repo_test.sh  safety_integration_test.sh  smoke_test.sh
repo-customiser/: README.adoc
repo-customiser/docs/: ROADMAP.adoc
repo-slm-augmentor/: README.adoc  ROADMAP.adoc
repo-slm-augmentor/security-knowledge/logtalk/: security_errors.lgt
scripts/: validate-template.sh
src/Scaffoldia/: Builder.hs  Constraints.hs  Registry.hs  Template.hs  Types.hs
test/: Main.hs
tests/e2e/: template_instantiation_test.sh
