cabal-version:      3.0
name:               scaffoldia
version:            0.1.0.0
synopsis:           Repository scaffolding engine with template validation
description:
    Scaffoldia is a developer-centred, modular, and community-driven repo
    scaffolding engine. It validates language/tool templates via a Haskell-powered
    registry, composes repo scaffolds using Nickel, and infers missing structure
    with MiniKanren.
license:            MPL-2.0
license-file:       LICENSE
author:             Hyperpolymath
maintainer:         hyperpolymath
copyright:          (c) 2026 Hyperpolymath
category:           Development
build-type:         Simple
extra-doc-files:    README.adoc
                    SECURITY.md

tested-with:        GHC == 9.6.4
                    GHC == 9.8.2

source-repository head
    type:     git
    location: https://github.com/hyperpolymath/scaffoldia.git

common warnings
    ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates
                 -Wincomplete-uni-patterns -Wmissing-export-lists
                 -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints

executable scaffoldia
    import:           warnings
    main-is:          scaffoldia.hs
    hs-source-dirs:   cli
    default-language: Haskell2010
    build-depends:
        base >= 4.14 && < 5,
        optparse-applicative >= 0.17 && < 0.19,
        aeson >= 2.0 && < 2.3,
        text >= 1.2 && < 2.2,
        bytestring >= 0.10 && < 0.13,
        directory >= 1.3 && < 1.4,
        filepath >= 1.4 && < 1.6
    default-extensions:
        OverloadedStrings
        DeriveGeneric

library
    import:           warnings
    exposed-modules:
        Scaffoldia.Template
        Scaffoldia.Registry
        Scaffoldia.Builder
        Scaffoldia.Constraints
    other-modules:
        Scaffoldia.Types
    hs-source-dirs:   src
    default-language: Haskell2010
    build-depends:
        base >= 4.14 && < 5,
        aeson >= 2.0 && < 2.3,
        text >= 1.2 && < 2.2,
        bytestring >= 0.10 && < 0.13,
        directory >= 1.3 && < 1.4,
        filepath >= 1.4 && < 1.6,
        containers >= 0.6 && < 0.8,
        mtl >= 2.2 && < 2.4,
        process >= 1.6 && < 1.7

test-suite scaffoldia-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test
    default-language: Haskell2010
    build-depends:
        base >= 4.14 && < 5,
        scaffoldia,
        hspec >= 2.9 && < 2.12,
        QuickCheck >= 2.14 && < 2.16
